Pequeña demo de JS

--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curso de Javascript</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
     <h1>¿Que es lo que puedo hacer con Javascript?</h1>
-    <p id="demostracion">Este texto será transformado por JS</p>
+    <p id="demostracion"></p>
 
-    <button onclick="document.getElementById('demostracion').innerHTML='Texto transformado por JS'"></button>
+    
+
+    <script src="script.js"></script>
     
 </body>
 </html>
